--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -104,24 +104,22 @@
 		\end{itemize}
 		\item Gestión presupuestos
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearPresupuesto}{Crear presupuesto}
-			%\itemCaseUse{buscarAvanzadoPresupuestos}{Buscar avanzado presupuestos}
-			%\itemCaseUse{modificarPresupuesto}{Modificar presupuesto}
-			%\itemCaseUse{borrarPresupuesto}{Borrar presupuesto}
-			%\itemCaseUse{transformarPresupuestoEnVenta}{Transformar presupuesto en venta}
-			%\itemCaseUse{generarPresupuestoPDF}{Generar presupuesto en formato PDF}
-			%\itemCaseUse{enviarPresupuestoEmail}{Enviar presupuesto por correo electrónico}
-			%\itemCaseUse{listarLineasPresupuesto}{Listar líneas de presupuesto}
+			\itemCaseUse{crearPresupuesto}{Crear presupuesto}
+			\itemCaseUse{buscarAvanzadoPresupuestos}{Buscar avanzado presupuestos}
+			\itemCaseUse{modificarPresupuesto}{Modificar presupuesto}
+			\itemCaseUse{borrarPresupuesto}{Borrar presupuesto}
+			\itemCaseUse{transformarPresupuestoEnVenta}{Transformar presupuesto en venta}
+			\itemCaseUse{generarPresupuestoPDF}{Generar presupuesto en formato PDF}
+			\itemCaseUse{enviarPresupuestoEmail}{Enviar presupuesto por correo electrónico}
+			\itemCaseUse{listarLineasPresupuesto}{Listar líneas de presupuesto}
 			
 			
 		\end{itemize}
 		\item Gestión líneas de presupuesto
 		\begin{itemize}
-			\item Quitar esto cuando se descomente alguna línea de abajo
-			%\itemCaseUse{crearLineaPresupuesto}{Crear línea de presupuesto}
-			%\itemCaseUse{modificarLineaPresupuesto}{Modificar línea de presupuesto}
-			%\itemCaseUse{borrarLineaPresupuesto}{Borrar línea de presupuesto}
+			\itemCaseUse{crearLineaPresupuesto}{Crear línea de presupuesto}
+			\itemCaseUse{modificarLineaPresupuesto}{Modificar línea de presupuesto}
+			\itemCaseUse{borrarLineaPresupuesto}{Borrar línea de presupuesto}
 		\end{itemize}
 		\item Gestión ventas
 		\begin{itemize}
@@ -421,19 +419,19 @@
 			\input{Capitulos/Capitulo4/CasosUso/GestionClientes/borrarCliente.tex}
 
 			%GestionPresupuestos
-			%\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/crearPresupuesto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/buscarAvanzadoPresupuestos.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/modificarPresupuesto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/borrarPresupuesto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/transformarPresupuestoEnVenta.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/generarPresupuestoPDF.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/enviarPresupuestoEmail.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/listarLineasPresupuesto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/crearPresupuesto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/buscarAvanzadoPresupuestos.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/modificarPresupuesto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/borrarPresupuesto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/transformarPresupuestoEnVenta.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/generarPresupuestoPDF.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/enviarPresupuestoEmail.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionPresupuestos/listarLineasPresupuesto.tex}
 
 			%GestionLineasPresupuesto
-			%\input{Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/crearLineaPresupuesto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/modificarLineaPresupuesto.tex}
-			%\input{Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/borrarLineaPresupuesto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/crearLineaPresupuesto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/modificarLineaPresupuesto.tex}
+			\input{Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/borrarLineaPresupuesto.tex}
 
 			%GestionVentas
 			%\input{Capitulos/Capitulo4/CasosUso/GestionVentas/crearVenta.tex}
