--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/borrarPresupuesto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/borrarPresupuesto.tex
@@ -6,7 +6,7 @@
 \renewcommand{\caseUseName}{\CUborrarPresupuesto - Borrar presupuesto} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un administrador borrar un presupuesto.} %Resumen
-\renewcommand{\caseUsePeople}{Administradores: quiere borrar un producto.} %Actor: Meta
+\renewcommand{\caseUsePeople}{Administradores: quiere borrar un presupuesto.} %Actor: Meta
 \renewcommand{\caseUsePreconditions}{
 	\caseUseRow{Haber realizado con éxito el \CUbuscarAvanzadoPresupuestos\ (Buscar avanzado presupuestos).} %Precondiciones
 }
