Cambios en transfPresupEnVenta y modificarLineaPre

--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/modificarLineaPresupuesto.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasPresupuesto/modificarLineaPresupuesto.tex
@@ -3,7 +3,7 @@
 
 \renewcommand{\caseUseCreated}{04/02/2020} %Fecha creación
 \renewcommand{\caseUseModified}{04/02/2020} %Fecha modificación
-\renewcommand{\caseUseName}{\CUcrearLineaPresupuesto\ - Modificar linea de presupuesto} %{\CUcammelCase - Title}
+\renewcommand{\caseUseName}{\CUmodificarLineaPresupuesto\ - Modificar linea de presupuesto} %{\CUcammelCase - Title}
 
 \renewcommand{\caseUseSummary}{Este caso de uso permite a un vendedor modificar una linea de presupuesto.} %Resumen
 \renewcommand{\caseUsePeople}{Vendedores: quiere modificar una linea de presupuesto.} %Actor: Meta
