--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/transformarPresupuestoEnVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionPresupuestos/transformarPresupuestoEnVenta.tex
@@ -27,7 +27,7 @@
     \caseUseRow{El escenario vuelve al punto 1.}
     \newAlternative{A2:El vendedor ha dejado el campo de cliente vacío.}{3} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe seleccionar un cliente valido.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe seleccionar un cliente válido.}
     \caseUseRow{}
     \caseUseRow{El escenario vuelve al punto 2.}
 }
